2013-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Fix compilation of
	'has' in a function.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/template.boot: remove, move content to
	'nrunfast.boot', 'database.boot' and 'nruncomp.boot'.
	src/interp/Makefile.in: Adjust.
	src/interp/parsing.lisp, src/interp/lisplib.boot,
	src/interp/nruncomp.boot, src/interp/scwrap2.boot,
	src/interp/property.lisp, src/interp/spad.lisp,
	src/interp/compiler.boot: Clean up.

2013-07-24  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/boot/Makefile.in:  Remove AX_FLAGS.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/macros.lisp,
	src/interp/vmlisp.lisp:  Fix tracing with clisp.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/modemap.boot:
	Simplify modemap handling.

2013-07-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/reclos.spad.pamphlet,
	src/algebra/xpoly.spad.pamphlet,
	src/algebra/xlpoly.spad.pamphlet,
	src/algebra/skpol.spad.pamphlet,
	src/algebra/multpoly.spad.pamphlet,
	src/algebra/newpoly.spad.pamphlet: Add explicit
	source qualification.

2013-07-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/array2.spad.pamphlet: Fix error messages.

2013-07-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Convert most tracing function to Boot, clean up.
	* src/interp/debug.lisp: Delete. Move remainig content to
	src/interp/macros.lisp
	src/interp/trace.boot: Put converted function here.
	src/interp/c-util.boot, src/interp/nruncomp.boot,
	src/interp/vmlisp.lisp, src/interp/spad.lisp,
	src/interp/ncomp.boot, src/interp/Makefile.in:
	Clean up and adjust.

2013-07-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/monitor.lisp: Remove unused file.
	src/interp/Makefile.in: Adjust.

2013-07-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/doc/Makefile.in, src/doc/ht/graphics.ht: Restore
	mobius.VIEW
