@@ -1,3 +1,9 @@
+2013-07-25  Krystian Baclawski <krystian.baclawski@gmail.com>
+
+	* src/interp/g-boot.boot, src/interp/define.boot,
+	src/interp/compiler.boot, src/lisp/primitives.lisp:
+	Add type declarations to Lisp output.
+
 2013-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/compiler.boot: Fix compilation of
@@ -74,7 +80,6 @@
 	src/interp/daase.lisp, src/interp/topics.boot,
 	src/share/algebra/topics.data: remove warm.data, topics.data, and
 	related code
-
 
 2013-07-12  Ralf Hemmecke  <ralf@hemmecke.org>
 
